--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,4 +32,4 @@ jobs:
         run: |
           echo "$SSH_PRIVATE_KEY" > private_key
           chmod 600 private_key
-          rsync -avz --delete -e "ssh -i private_key -o StrictHostKeyChecking=no" ./build/ $SERVER_USER@$SERVER_IP:/path/to/your/app
+          rsync -avz --delete -e "ssh -i private_key -o StrictHostKeyChecking=no" ./build/ $SERVER_USER@$SERVER_IP:/var/www/html
